# retail-inventory-ai

./: .env.example  .gitattributes  .gitignore  DECISIONS.md  ISSUES.md  PROJECT_MEMORY.md  README.md  RESULTS.md  pyproject.toml
autolabel/: cmp_clip_vs_gemini.md  cmp_clip_vs_gt.md  cmp_gemini_vs_gt.md  compare_labels.py  label_clip.py  label_sku110k.sh  label_vlm.py  labelio.py  launch_labels.sh  launch_open_vlm_endpoint.sh  launch_sku_vlm_benchmark.sh  open_vlm_endpoint_startup.sh  sku_vlm.py  sku_vlm_benchmark.sh
backend/: analysis_service.py  api.py  init_schema.py  inventory_db.py  llm_service.py  schema.sql
classification/: README.md  classifier_lib.py  crop_sku110k.sh  gen_crops.py  infer.py  launch_crops.sh  launch_train.sh  launch_tune_gate.sh  taxonomy.json  taxonomy.py  train_classifier.py  train_classifier.sh  tune_gate.sh
classification/artifacts/clip_v1/: classifier.pt  gate_sweep.json  label_maps.json  metrics.json
classification/labels/: README.md  labels_gemini_train.csv  labels_gemini_val.csv
datasets/: README.md  _fetcher_lib.sh  fetch_coco2017.sh  fetch_rpc.sh  fetch_sku110k.sh  launch_dataset_fetcher.sh  setup_bucket.sh
detection/: README.md  launch_vm.sh  teardown.sh  train_sku110k.sh
detection/artifacts/: metrics.json
detection/artifacts/v11/: metrics.json
docs/: MAHESH_SYNC_HANDOFF.md  RUN_SHELFSIGHT_UI.md  database_schema.md  mgrandhi_teammate_repo_setup.md  open_vlm_sku_benchmark.md
frontend/: app.py  deploy_hybrid_ui_gcp.sh  gradio_app.py  run_hybrid_ui.sh  run_web_dev.sh  run_web_ui.sh
frontend/web/: index.html  package-lock.json  package.json  vite.config.ts
frontend/web/src/: App.css  App.test.tsx  App.tsx  api.test.ts  api.ts  index.css  types.ts
frontend/web/src/test/: setup.ts
notebooks/: 01_detection_checkpoint.ipynb  02_classification_pipeline.ipynb
report/: README.md  main.tex  references.bib
report/sections/: 01_problem.tex  02_literature.tex  03_approach.tex  04_datasets.tex  05_experiments.tex  06_results.tex  07_conclusion.tex
retrieval/: pipeline.py
tests/: test_analysis_service.py  test_api.py  test_inventory_db.py
