[project]
name = "retail-inventory-ai"
version = "0.1.0"
description = "Intelligent Retail Product Detection & Inventory Management System (Computer Vision + LLM-based Business Intelligence)"
requires-python = ">=3.11,<3.12"
readme = "README.md"

# Dependency groups are split per module so early weeks don't need the whole stack installed.
# Install everything with:  pip install -e ".[all]"
dependencies = [
    # core / shared
    "numpy>=1.26,<2.0",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "opencv-python>=4.9",
    "pillow>=10.2",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Module 1 — detection (today's focus)
detection = [
    "ultralytics>=8.2",
    "torch>=2.2",
    "torchvision>=0.17",
    "google-cloud-storage>=2.16",
]
# Module 2 — classification (ResNet-50 + CLIP)
classification = [
    "torch>=2.2",
    "torchvision>=0.17",
    "open-clip-torch>=2.24",
    "scikit-learn>=1.4",
]
# Module 3 — auto-labeling (LLaVA via Ollama)
autolabel = [
    "ollama>=0.3",
]
# Module 4 — backend (FastAPI + SQLite)
backend = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
]
# Module 5 — NL business intelligence (LangGraph + Ollama)
bi = [
    "langchain>=0.2",
    "langgraph>=0.1",
    "langchain-community>=0.2",
    "ollama>=0.3",
]
# Module 7 — frontend (Streamlit dashboard)
frontend = [
    "streamlit>=1.33",
    "plotly>=5.20",
    "requests>=2.31",
]
# dev / tooling
dev = [
    "pytest>=8.1",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "ruff>=0.4",
]
all = [
    "retail-inventory-ai[detection,classification,autolabel,backend,bi,frontend,dev]",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
