[project]
name = "retail-inventory-ai"
version = "0.1.0"
description = "Intelligent Retail Product Detection & Inventory Management System (Computer Vision + LLM-based Business Intelligence)"
requires-python = ">=3.10,<3.12"
readme = "README.md"

# Dependency groups are split per module so early weeks don't need the whole stack installed.
# Install everything with:  pip install -e ".[all]"
dependencies = [
    # core / shared
    "numpy>=1.26,<2.0",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "opencv-python>=4.9",
    "pillow>=10.2",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Module 1 — detection (today's focus)
detection = [
    "ultralytics>=8.2",
    "torch>=2.2",
    "torchvision>=0.17",
    "google-cloud-storage>=2.16",
]
# Module 2 — classification (ResNet-50 + CLIP)
classification = [
    "torch>=2.2",
    "torchvision>=0.17",
    "open-clip-torch>=2.24",
    "scikit-learn>=1.4",
]
# Module 3 — auto-labeling: GCP VLM (Vertex AI Gemini) + self-hosted Gemma/LLaVA via Ollama.
# google-genai is the access path for Vertex (client(vertexai=True, ...)); auth is the VM
# service account (roles/aiplatform.user) — no API key.
autolabel = [
    "google-genai>=0.3",
    "ollama>=0.3",
]
# Module 2b — SWIN + FAISS retrieval classification + Streamlit analytics/BI dashboard.
# Alternative to the trained classifier: embed crops with SWIN, nearest-neighbour search a
# FAISS index of ~692k labeled crops. Runs the dashboard (frontend/app.py) end-to-end.
retrieval = [
    "torch>=2.2",
    "torchvision>=0.17",
    "transformers>=4.40",
    "faiss-cpu>=1.8",
    "ultralytics>=8.2",
    "streamlit>=1.33",
    "gradio>=4.44",
    "plotly>=5.20",
    "requests>=2.31",
    "google-genai>=0.3",
]
# Module 4 — backend (FastAPI + SQLite)
backend = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
]
# Module 5 — NL business intelligence (LangGraph + Ollama)
bi = [
    "langchain>=0.2",
    "langgraph>=0.1",
    "langchain-community>=0.2",
    "ollama>=0.3",
]
# Module 7 — frontend (Streamlit dashboard)
frontend = [
    "streamlit>=1.33",
    "gradio>=4.44",
    "plotly>=5.20",
    "requests>=2.31",
]
# dev / tooling
dev = [
    "pytest>=8.1",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "ruff>=0.4",
]
all = [
    "retail-inventory-ai[detection,classification,autolabel,retrieval,backend,bi,frontend,dev]",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Declare packages explicitly. With this many top-level dirs (detection/, datasets/, report/,
# notebooks/, frontend/ are scripts/data, not importable packages), setuptools' flat-layout
# auto-discovery refuses to guess. List only the real importable Python packages.
[tool.setuptools]
packages = ["autolabel", "classification", "retrieval", "backend", "bi_interface"]
